# ma_system

./: .gitignore  CMakeLists.txt  compile.sh  config.conf  formations.conf  killall.sh  log.txt  log0_0.txt  log1_0.txt  log2.txt  log2_0.txt  log2_1.txt  make_configs.sh  start.sh  strategy.conf  test.sh
src/: acthandler.cpp  acthandler.h  connection.cpp  connection.h  enums.h  formation.cpp  formation.h  globals.h  logger.cpp  logger.h  main.cpp  messagehandler.cpp  messagehandler.h  objects.cpp  objects.h  parser.cpp  parser.h  player.cpp  player.h  playermapper.cpp  playermapper.h  soccertypes.cpp  soccertypes.h  starter.cpp  strategy.cpp  strategy.h  utilities.cpp  utilities.h  worldmodel.cpp  worldmodel.h  worldmodelmapping.cpp
